Fixing accesibility - contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body, ul {
 }
 
 body {
-    background-color: #BAC6CB;
+    background-color: #93A5AE;
     font-size: 12px;
     font-family: 'Cutive Mono', monospace;
   }
